--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 <body>
     <h1>United Team Time</h1>
 
-    <form action="https://formspree.io/f/{form_id}" method="post">
-        <label for="email">Your Email</label>
-        <input name="Email" id="email" type="email">
-        <button type="submit">Submit</button>
-      </form>
+    <form
+  action="https://formspree.io/f/xeqnaely"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="_replyto">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
 </body>
 </html>
